@@ -160,3 +160,9 @@ Between versions 1.8.0 and 1.8.1
     ns_config:set({node, node(), {timeout, ns_memcached_outer_very_heavy}}, 120000).
   Which will bump timeout for most heavy ns_memcached calls up to 120
   seconds (most timeouts are in milliseconds)
+
+* config replication was improved to avoid avalanche of config NxN
+  replications caused by incoming config replications. Now only
+  locally produced replications are forcefully pushed to all
+  nodes. Note: old random gossip is still there. As well as somewhat
+  excessive full config push&pull to newly discovered node(s).
